--- a/pocket_updater_gui/pocket_updater_gui.csproj
+++ b/pocket_updater_gui/pocket_updater_gui.csproj
@@ -28,4 +28,11 @@
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.6.1" />
     <PackageReference Include="Crc32.NET" Version="1.2.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Views\HomeView.axaml.cs">
+      <DependentUpon>HomeView.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+  </ItemGroup>
 </Project>
