--- a/pocket_updater_gui/pocket_updater_gui.csproj
+++ b/pocket_updater_gui/pocket_updater_gui.csproj
@@ -25,6 +25,8 @@
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.21" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.21" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
+    <PackageReference Include="Projektanker.Icons.Avalonia" Version="5.13.0" />
+    <PackageReference Include="Projektanker.Icons.Avalonia.FontAwesome" Version="5.13.0" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.6.1" />
     <PackageReference Include="Crc32.NET" Version="1.2.0" />
   </ItemGroup>
