--- a/pocket_updater_gui.csproj
+++ b/pocket_updater_gui.csproj
@@ -35,6 +35,7 @@
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.21" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.21" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
+    <PackageReference Include="MessageBox.Avalonia" Version="2.1.0" />
     <PackageReference Include="Projektanker.Icons.Avalonia" Version="5.13.0" />
     <PackageReference Include="Projektanker.Icons.Avalonia.FontAwesome" Version="5.13.0" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.6.1" />
